# advanced-track.ie

./: .gitignore  IE_AIRPLANES.duckdb  README.md  app.py  database.py  database_connector.py  debug_data.py  duckdb_connector.py  explore_route_schema.py  explore_schema.py  list_tables.py  pyproject.toml  queries.py  s00_dotenv_example.ipynb  s01_intro_duckdb.ipynb  streamlit_app.py  test.ipynb  test_connection.py
dashboard/: __init__.py  commercial_pipeline.py  financial_pipeline.py  fleet_pipeline.py  hr_pipeline.py
data/parquet/: airplanes.parquet  airports.parquet  countries.parquet  department.parquet  employee.parquet  flights.parquet  passengers.parquet  routes.parquet  tickets.parquet
scripts/: export_tables_to_parquet.py
tests/: test_commercial_pipeline.py  test_database_connector.py  test_financial_pipeline.py  test_fleet_pipeline.py  test_hr_pipeline.py
