[project]
name = "at"
version = "0.1.0"
description = "Advanced track"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "python-dotenv>=1.2.1",
    "pyodbc>=5.0.0",
    "azure-identity>=1.15.0",
    "sqlalchemy>=2.0.0",
    "ibm-db-sa>=0.4.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.1.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]
